--- a/title.html
+++ b/title.html
@@ -6,19 +6,19 @@
 <body vlink="red" link="cyan">
 <center>
 <h1>Dowson Racing - Formula Vee</h1>
-<!--<img vspace=10 src="pictures/trackpics/car_cut.GIF"></a>
-</center>-->
+<img vspace=10 src="pictures/trackpics/car_cut.GIF"></a>
 
 
-<h1>I've retired from Formula Vee</h1>
+
+<h2>I've retired from Formula Vee</h2>
 <p>Yes the car has been sold. It was mostly fun and sometimes frustrating but always enjoyable.
-<p>This website contains my pre 2004 racing exploits. The <a href="http://dowsonracing.blogspot.com/">Blog</a> is from 2006 inwards.
+<p>This website contains my pre 2004 racing exploits. The <a href="http://dowsonracing.blogspot.com/">http://dowsonracing.blogspot.com</a> is from 2006 inwards.
 
 <p>For the time being I am going to post to a blog.  Fingers crossed I post. Maybe mobile blogging will help. I will keep this website as a museum !!!
-<p>Times have moved on since I last updated the site. We now have video - hosted by YouTube. See what happened to my car at the end of last season
+<!--<p>Times have moved on since I last updated the site. We now have video - hosted by YouTube. See what happened to my car at the end of last season
 <p><object width="425" height="344"><param name="movie" value="http://www.youtube.com/v/o6NRYr1A16s&hl=en&fs=1"></param><param name="allowFullScreen" value="true"></param><embed src="http://www.youtube.com/v/o6NRYr1A16s&hl=en&fs=1" type="application/x-shockwave-flash" allowfullscreen="true" width="425" height="344"></embed></object>
 <p><a href="http://www.youtube.com/profile_videos?user=tonydvee">More video here</a>
-
+</center>-->
 <p>
 <!-- Gostats.com web hit code. Please do not change this-->
 <script>var go_mem="tonyd";</script>
