--- a/mail.html
+++ b/mail.html
@@ -1,12 +1,12 @@
 <HTML>
-<FORM METHOD=POST 
+<FORM METHOD=POST
 ACTION="/cgi-bin/mailform.cgi">
-<p>Email me at tony@dowsonracing.co.uk
-<P>Name : 
+<p>Email me at dont@bother.co.uk
+<P>Name :
 <INPUT TYPE="text" NAME="name" SIZE=40>
-<P>Email : 
+<P>Email :
 <INPUT TYPE="text" NAME="email" SIZE=40>
-<P>Subject : 
+<P>Subject :
 <INPUT TYPE="text"
 NAME="subject" SIZE=40>
 <INPUT TYPE="hidden" NAME="targetpage"
@@ -16,6 +16,6 @@ value="http://www.dowsonnet.freeserve.co.uk/thankyou.html">
 <TEXTAREA NAME="comment" ROWS=20 COLS=70>
 </TEXTAREA>
 <P>
-<INPUT TYPE="submit" VALUE="Submit"> 
+<INPUT TYPE="submit" VALUE="Submit">
 <INPUT TYPE="reset">
 </FORM></HTML>
