--- a/links.html
+++ b/links.html
@@ -12,12 +12,10 @@
 <td>
 <ul>
 <li><a href="http://www.veecentre.com" target="_top">Vee Centre</a> - UK Formula Vee Centre
-<li><a href="http://www.multimania.com/jcracing" target="_top">Jeremy Clark</a> - This year's champion
 <li><a href="http://www.750mc.co.uk" target="_top">750 MC</a> - Results, fixtures, regulations and Vees for sale
-<li><a href="http://www.leastone-racing.com" target="_top">Leastone Racing</a>
+<li><a href="http://www.leastoneracingcars.com" target="_top">Leastone Racing</a>
 <li><a href="http://www.vwracing.net" target="_top">GAC</a>
 <li><a href="http://www.formulavee.co.uk" target="_top">AHS</a> - Alan Harding's Formula Vee
-<li><a href="http://www.morferacing.co.uk" target="_top">Mike Jenvey's website</a> - Formula Vee competitor.
 
 
 </ul>
@@ -26,9 +24,8 @@
 <tr><td valign=top>Other Formula Vee
 <td>
 <ul>
-<li><a href="http://www.formel-v.de/index__e.html" target="_top">German Formula Vee</a> - Info on German Formula Vee which Brit Vees can race in
-<li><a href="http://www.veescene.com" target="_top">Irish Formula Vee</a> - Info on the Vee Scene in Ireland
-<li><a href="http://www.formulaveesa.org.za" target="_top">South African Formula Vee</a>
+<li><a href="http://www.formulavee.us/" target="_top">US Formula Vee</a>
+<li><a href="http://formulavee.ie" target="_top">Irish Formula Vee</a> - Info on the Vee Scene in Ireland
 <li><a href="http://www.fvee.org.au" target="_top">Australian Formula Vee</a>
 
 
@@ -41,12 +38,13 @@
 <li><a href="http://www.autosport.com">Autosport</a>
 </ul>
 
+<!--
 <tr><td valign=top>Fun
 <td>
 <ul>
 <li><a href="http://www.tv4.se/lattjo/kojan/bilbanan.asp" target="_top">Scalextric</a> - play against a parrot or a friend (site in Swedish I think but still very playable)
 </ul>
-
+-->
 
 
 </table>
