--- a/title.html
+++ b/title.html
@@ -12,7 +12,7 @@
 
 <h2>I've retired from Formula Vee</h2>
 <p>Yes the car has been sold. It was mostly fun and sometimes frustrating but always enjoyable.
-<p>This website contains my pre 2004 racing exploits. The <a href="http://dowsonracing.blogspot.com/" target="_blank">http://dowsonracing.blogspot.com</a> is from 2006 inwards.
+<p>This website contains my pre 2004 racing exploits. The <a href="http://dowsonracing.blogspot.com/" target="_blank">blog</a> is from 2006 inwards.
 
 <p>For the time being I am going to post to a blog.  Fingers crossed I post. Maybe mobile blogging will help. I will keep this website as a museum !!!
 <p>Times have moved on since I last updated the site. We now have video - hosted by YouTube. See what happened to my car at the end of last season
