--- a/title.html
+++ b/title.html
@@ -16,8 +16,9 @@
 
 <p>For the time being I am going to post to a blog.  Fingers crossed I post. Maybe mobile blogging will help. I will keep this website as a museum !!!
 <p>Times have moved on since I last updated the site. We now have video - hosted by YouTube. See what happened to my car at the end of last season
+<p><a href="https://www.youtube.com/watch?v=o6NRYr1A16s" target="_blank"><img src="pictures/crash.jpg" border=2 vspace=5  height=240 width=320></a><br>
 <!--<p><object width="425" height="344"><param name="movie" value="http://www.youtube.com/v/o6NRYr1A16s&hl=en&fs=1"></param><param name="allowFullScreen" value="true"></param><embed src="http://www.youtube.com/v/o6NRYr1A16s&hl=en&fs=1" type="application/x-shockwave-flash" allowfullscreen="true" width="425" height="344"></embed></object>-->
-<p><a href="https://www.youtube.com/user/tonydvee" target="_blank">Some video here</a>
+<p><a href="https://www.youtube.com/user/tonydvee" target="_blank">More videos here</a>
 </center>
 <p>
 <!-- Gostats.com web hit code. Please do not change this-->
